[package]
name = "tiny-keccak-py"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tiny_keccak"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
