[package]
name = "tiny-keccak-py"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tiny_keccak"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
